fixed z-index of the wiki editor
git-svn-id: file:///var/lib/codepot/svnrepo/codepot/trunk@447 acb928ee-5b15-407b-8704-3b33df051210

--- a/codepot/src/css/wiki.css
+++ b/codepot/src/css/wiki.css
@@ -42,12 +42,12 @@
 
 #wiki_edit_toolbar .medium-editor-toolbar {
 	visibility: visible !important;
-	line-height: 2em;
 	-moz-border-radius: 0;
 	-webkit-border-radius: 0;
 	border-radius: 0;
 	margin: 0;
 	padding: 0;
+	z-index: 0;
 }
 
 
